A5/parser.output
Nonterminals useless in grammar

    external_decl


Rules useless in grammar

   84 external_decl: external_decl_decl
   85              | function_def


State 3 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_decl_list

    2 external_decl_list: external_decl_section function_def_section

    3 external_decl_section: external_decl_section external_decl_decl
    4                      | ε

    5 external_decl_decl: var_decl_stmt
    6                   | function_decl

    7 function_def_section: function_def_section function_def
    8                     | ε

    9 formal_param_list: formal_param_list ',' formal_param
   10                  | formal_param

   11 formal_param: param_type IDENTIFIER

   12 param_type: INT
   13           | FLOAT
   14           | BOOL
   15           | STRING

   16 function_decl: named_type IDENTIFIER '(' formal_param_list ')' ';'
   17              | named_type IDENTIFIER '(' ')' ';'

   18 $@1: ε

   19 function_def: named_type IDENTIFIER '(' ')' '{' $@1 optional_local_var_decl_stmt_list statement_list '}'

   20 $@2: ε

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

   22 var_decl_stmt: named_type var_decl_item_list ';'

   23 var_decl_item_list: var_decl_item_list ',' var_decl_item
   24                   | var_decl_item

   25 var_decl_item: IDENTIFIER

   26 named_type: INT
   27           | FLOAT
   28           | BOOL
   29           | STRING
   30           | VOID

   31 optional_local_var_decl_stmt_list: var_decl_stmt_list
   32                                  | ε

   33 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt
   34                   | var_decl_stmt

   35 statement_list: statement_list statement
   36               | ε

   37 statement: assignment_statement
   38          | print_statement
   39          | read_statement
   40          | return_statement
   41          | call_statement
   42          | if_statement
   43          | while_statement
   44          | block_statement

   45 block_statement: '{' statement_list '}'

   46 if_statement: IF '(' expression ')' statement
   47             | IF '(' expression ')' statement ELSE statement

   48 while_statement: WHILE '(' expression ')' statement
   49                | DO statement WHILE '(' expression ')' ';'

   50 assignment_statement: variable_as_operand ASSIGNMENT expression ';'

   51 variable_as_operand: variable_name

   52 variable_name: IDENTIFIER

   53 function_call: IDENTIFIER '(' ')'
   54              | IDENTIFIER '(' argument_list ')'

   55 argument_list: argument_list ',' expression
   56              | expression

   57 expression: expression '+' expression
   58           | expression '-' expression
   59           | expression '*' expression
   60           | expression '/' expression
   61           | '-' expression
   62           | NOT expression
   63           | expression EQ expression
   64           | expression NE expression
   65           | expression LT expression
   66           | expression LE expression
   67           | expression GT expression
   68           | expression GE expression
   69           | expression AND expression
   70           | expression OR expression
   71           | expression '?' expression ':' expression
   72           | '(' expression ')'
   73           | function_call
   74           | variable_as_operand
   75           | constant_as_operand

   76 constant_as_operand: INTEGER_NUMBER
   77                    | FLOAT_NUMBER
   78                    | STRING_CONSTANT

   79 print_statement: PRINT expression ';'

   80 read_statement: READ variable_name ';'

   81 return_statement: RETURN ';'
   82                 | RETURN expression ';'

   83 call_statement: function_call ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 17 19 21 46 47 48 49 53 54 72
    ')' (41) 16 17 19 21 46 47 48 49 53 54 72
    '*' (42) 59
    '+' (43) 57
    ',' (44) 9 23 55
    '-' (45) 58 61
    '/' (47) 60
    ':' (58) 71
    ';' (59) 16 17 22 49 50 79 80 81 82 83
    '?' (63) 71
    '{' (123) 19 21 45
    '}' (125) 19 21 45
    error (256)
    INT <token> (258) 12 26
    FLOAT <token> (259) 13 27
    BOOL <token> (260) 14 28
    STRING <token> (261) 15 29
    VOID <token> (262) 30
    IDENTIFIER <token> (263) 11 16 17 19 21 25 52 53 54
    INTEGER_NUMBER <token> (264) 76
    FLOAT_NUMBER <token> (265) 77
    STRING_CONSTANT <token> (266) 78
    ASSIGNMENT <token> (267) 50
    PRINT <token> (268) 79
    READ <token> (269) 80
    RETURN <token> (270) 81 82
    IF <token> (271) 46 47
    ELSE <token> (272) 47
    WHILE <token> (273) 48 49
    DO <token> (274) 49
    EQ <token> (275) 63
    NE <token> (276) 64
    LT <token> (277) 65
    LE <token> (278) 66
    GT <token> (279) 67
    GE <token> (280) 68
    AND <token> (281) 69
    OR <token> (282) 70
    NOT <token> (283) 62
    UMINUS (284)
    IFX (285)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <ast> (44)
        on left: 1
        on right: 0
    external_decl_list <ast> (45)
        on left: 2
        on right: 1
    external_decl_section <ast> (46)
        on left: 3 4
        on right: 2 3
    external_decl_decl <ast> (47)
        on left: 5 6
        on right: 3
    function_def_section <ast> (48)
        on left: 7 8
        on right: 2 7
    formal_param_list <list> (49)
        on left: 9 10
        on right: 9 16 21
    formal_param <ast> (50)
        on left: 11
        on right: 9 10
    param_type <dtype> (51)
        on left: 12 13 14 15
        on right: 11
    function_decl <ast> (52)
        on left: 16 17
        on right: 6
    function_def <ast> (53)
        on left: 19 21
        on right: 7
    $@1 (54)
        on left: 18
        on right: 19
    $@2 (55)
        on left: 20
        on right: 21
    var_decl_stmt (56)
        on left: 22
        on right: 5 33 34
    var_decl_item_list (57)
        on left: 23 24
        on right: 22 23
    var_decl_item (58)
        on left: 25
        on right: 23 24
    named_type <token> (59)
        on left: 26 27 28 29 30
        on right: 16 17 19 21 22
    optional_local_var_decl_stmt_list (60)
        on left: 31 32
        on right: 19 21
    var_decl_stmt_list (61)
        on left: 33 34
        on right: 31 33
    statement_list <ast> (62)
        on left: 35 36
        on right: 19 21 35 45
    statement <ast> (63)
        on left: 37 38 39 40 41 42 43 44
        on right: 35 46 47 48 49
    block_statement <ast> (64)
        on left: 45
        on right: 44
    if_statement <ast> (65)
        on left: 46 47
        on right: 42
    while_statement <ast> (66)
        on left: 48 49
        on right: 43
    assignment_statement <ast> (67)
        on left: 50
        on right: 37
    variable_as_operand <ast> (68)
        on left: 51
        on right: 50 74
    variable_name <token> (69)
        on left: 52
        on right: 51 80
    function_call <ast> (70)
        on left: 53 54
        on right: 73 83
    argument_list <list> (71)
        on left: 55 56
        on right: 54 55
    expression <ast> (72)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 46 47 48 49 50 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 79 82
    constant_as_operand <ast> (73)
        on left: 76 77 78
        on right: 75
    print_statement <ast> (74)
        on left: 79
        on right: 38
    read_statement <ast> (75)
        on left: 80
        on right: 39
    return_statement <ast> (76)
        on left: 81 82
        on right: 40
    call_statement <ast> (77)
        on left: 83
        on right: 41


State 0

    0 $accept: • program $end

    $default  reduce using rule 4 (external_decl_section)

    program                go to state 1
    external_decl_list     go to state 2
    external_decl_section  go to state 3


State 1

    0 $accept: program • $end

    $end  shift, and go to state 4


State 2

    1 program: external_decl_list •

    $default  reduce using rule 1 (program)


State 3

    2 external_decl_list: external_decl_section • function_def_section
    3 external_decl_section: external_decl_section • external_decl_decl

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    BOOL    shift, and go to state 7
    STRING  shift, and go to state 8
    VOID    shift, and go to state 9

    INT       [reduce using rule 8 (function_def_section)]
    FLOAT     [reduce using rule 8 (function_def_section)]
    BOOL      [reduce using rule 8 (function_def_section)]
    STRING    [reduce using rule 8 (function_def_section)]
    VOID      [reduce using rule 8 (function_def_section)]
    $default  reduce using rule 8 (function_def_section)

    external_decl_decl    go to state 10
    function_def_section  go to state 11
    function_decl         go to state 12
    var_decl_stmt         go to state 13
    named_type            go to state 14


State 4

    0 $accept: program $end •

    $default  accept


State 5

   26 named_type: INT •

    $default  reduce using rule 26 (named_type)


State 6

   27 named_type: FLOAT •

    $default  reduce using rule 27 (named_type)


State 7

   28 named_type: BOOL •

    $default  reduce using rule 28 (named_type)


State 8

   29 named_type: STRING •

    $default  reduce using rule 29 (named_type)


State 9

   30 named_type: VOID •

    $default  reduce using rule 30 (named_type)


State 10

    3 external_decl_section: external_decl_section external_decl_decl •

    $default  reduce using rule 3 (external_decl_section)


State 11

    2 external_decl_list: external_decl_section function_def_section •
    7 function_def_section: function_def_section • function_def

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    BOOL    shift, and go to state 7
    STRING  shift, and go to state 8
    VOID    shift, and go to state 9

    $default  reduce using rule 2 (external_decl_list)

    function_def  go to state 15
    named_type    go to state 16


State 12

    6 external_decl_decl: function_decl •

    $default  reduce using rule 6 (external_decl_decl)


State 13

    5 external_decl_decl: var_decl_stmt •

    $default  reduce using rule 5 (external_decl_decl)


State 14

   16 function_decl: named_type • IDENTIFIER '(' formal_param_list ')' ';'
   17              | named_type • IDENTIFIER '(' ')' ';'
   22 var_decl_stmt: named_type • var_decl_item_list ';'

    IDENTIFIER  shift, and go to state 17

    var_decl_item_list  go to state 18
    var_decl_item       go to state 19


State 15

    7 function_def_section: function_def_section function_def •

    $default  reduce using rule 7 (function_def_section)


State 16

   19 function_def: named_type • IDENTIFIER '(' ')' '{' $@1 optional_local_var_decl_stmt_list statement_list '}'
   21             | named_type • IDENTIFIER '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

    IDENTIFIER  shift, and go to state 20


State 17

   16 function_decl: named_type IDENTIFIER • '(' formal_param_list ')' ';'
   17              | named_type IDENTIFIER • '(' ')' ';'
   25 var_decl_item: IDENTIFIER •

    '('  shift, and go to state 21

    $default  reduce using rule 25 (var_decl_item)


State 18

   22 var_decl_stmt: named_type var_decl_item_list • ';'
   23 var_decl_item_list: var_decl_item_list • ',' var_decl_item

    ','  shift, and go to state 22
    ';'  shift, and go to state 23


State 19

   24 var_decl_item_list: var_decl_item •

    $default  reduce using rule 24 (var_decl_item_list)


State 20

   19 function_def: named_type IDENTIFIER • '(' ')' '{' $@1 optional_local_var_decl_stmt_list statement_list '}'
   21             | named_type IDENTIFIER • '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

    '('  shift, and go to state 24


State 21

   16 function_decl: named_type IDENTIFIER '(' • formal_param_list ')' ';'
   17              | named_type IDENTIFIER '(' • ')' ';'

    INT     shift, and go to state 25
    FLOAT   shift, and go to state 26
    BOOL    shift, and go to state 27
    STRING  shift, and go to state 28
    ')'     shift, and go to state 29

    formal_param_list  go to state 30
    formal_param       go to state 31
    param_type         go to state 32


State 22

   23 var_decl_item_list: var_decl_item_list ',' • var_decl_item

    IDENTIFIER  shift, and go to state 33

    var_decl_item  go to state 34


State 23

   22 var_decl_stmt: named_type var_decl_item_list ';' •

    $default  reduce using rule 22 (var_decl_stmt)


State 24

   19 function_def: named_type IDENTIFIER '(' • ')' '{' $@1 optional_local_var_decl_stmt_list statement_list '}'
   21             | named_type IDENTIFIER '(' • formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

    INT     shift, and go to state 25
    FLOAT   shift, and go to state 26
    BOOL    shift, and go to state 27
    STRING  shift, and go to state 28
    ')'     shift, and go to state 35

    formal_param_list  go to state 36
    formal_param       go to state 31
    param_type         go to state 32


State 25

   12 param_type: INT •

    $default  reduce using rule 12 (param_type)


State 26

   13 param_type: FLOAT •

    $default  reduce using rule 13 (param_type)


State 27

   14 param_type: BOOL •

    $default  reduce using rule 14 (param_type)


State 28

   15 param_type: STRING •

    $default  reduce using rule 15 (param_type)


State 29

   17 function_decl: named_type IDENTIFIER '(' ')' • ';'

    ';'  shift, and go to state 37


State 30

    9 formal_param_list: formal_param_list • ',' formal_param
   16 function_decl: named_type IDENTIFIER '(' formal_param_list • ')' ';'

    ','  shift, and go to state 38
    ')'  shift, and go to state 39


State 31

   10 formal_param_list: formal_param •

    $default  reduce using rule 10 (formal_param_list)


State 32

   11 formal_param: param_type • IDENTIFIER

    IDENTIFIER  shift, and go to state 40


State 33

   25 var_decl_item: IDENTIFIER •

    $default  reduce using rule 25 (var_decl_item)


State 34

   23 var_decl_item_list: var_decl_item_list ',' var_decl_item •

    $default  reduce using rule 23 (var_decl_item_list)


State 35

   19 function_def: named_type IDENTIFIER '(' ')' • '{' $@1 optional_local_var_decl_stmt_list statement_list '}'

    '{'  shift, and go to state 41


State 36

    9 formal_param_list: formal_param_list • ',' formal_param
   21 function_def: named_type IDENTIFIER '(' formal_param_list • ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

    ','  shift, and go to state 38
    ')'  shift, and go to state 42


State 37

   17 function_decl: named_type IDENTIFIER '(' ')' ';' •

    $default  reduce using rule 17 (function_decl)


State 38

    9 formal_param_list: formal_param_list ',' • formal_param

    INT     shift, and go to state 25
    FLOAT   shift, and go to state 26
    BOOL    shift, and go to state 27
    STRING  shift, and go to state 28

    formal_param  go to state 43
    param_type    go to state 32


State 39

   16 function_decl: named_type IDENTIFIER '(' formal_param_list ')' • ';'

    ';'  shift, and go to state 44


State 40

   11 formal_param: param_type IDENTIFIER •

    $default  reduce using rule 11 (formal_param)


State 41

   19 function_def: named_type IDENTIFIER '(' ')' '{' • $@1 optional_local_var_decl_stmt_list statement_list '}'

    $default  reduce using rule 18 ($@1)

    $@1  go to state 45


State 42

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' • '{' $@2 optional_local_var_decl_stmt_list statement_list '}'

    '{'  shift, and go to state 46


State 43

    9 formal_param_list: formal_param_list ',' formal_param •

    $default  reduce using rule 9 (formal_param_list)


State 44

   16 function_decl: named_type IDENTIFIER '(' formal_param_list ')' ';' •

    $default  reduce using rule 16 (function_decl)


State 45

   19 function_def: named_type IDENTIFIER '(' ')' '{' $@1 • optional_local_var_decl_stmt_list statement_list '}'

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    BOOL    shift, and go to state 7
    STRING  shift, and go to state 8
    VOID    shift, and go to state 9

    $default  reduce using rule 32 (optional_local_var_decl_stmt_list)

    var_decl_stmt                      go to state 47
    named_type                         go to state 48
    optional_local_var_decl_stmt_list  go to state 49
    var_decl_stmt_list                 go to state 50


State 46

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' • $@2 optional_local_var_decl_stmt_list statement_list '}'

    $default  reduce using rule 20 ($@2)

    $@2  go to state 51


State 47

   34 var_decl_stmt_list: var_decl_stmt •

    $default  reduce using rule 34 (var_decl_stmt_list)


State 48

   22 var_decl_stmt: named_type • var_decl_item_list ';'

    IDENTIFIER  shift, and go to state 33

    var_decl_item_list  go to state 18
    var_decl_item       go to state 19


State 49

   19 function_def: named_type IDENTIFIER '(' ')' '{' $@1 optional_local_var_decl_stmt_list • statement_list '}'

    $default  reduce using rule 36 (statement_list)

    statement_list  go to state 52


State 50

   31 optional_local_var_decl_stmt_list: var_decl_stmt_list •
   33 var_decl_stmt_list: var_decl_stmt_list • var_decl_stmt

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    BOOL    shift, and go to state 7
    STRING  shift, and go to state 8
    VOID    shift, and go to state 9

    $default  reduce using rule 31 (optional_local_var_decl_stmt_list)

    var_decl_stmt  go to state 53
    named_type     go to state 48


State 51

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' $@2 • optional_local_var_decl_stmt_list statement_list '}'

    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    BOOL    shift, and go to state 7
    STRING  shift, and go to state 8
    VOID    shift, and go to state 9

    $default  reduce using rule 32 (optional_local_var_decl_stmt_list)

    var_decl_stmt                      go to state 47
    named_type                         go to state 48
    optional_local_var_decl_stmt_list  go to state 54
    var_decl_stmt_list                 go to state 50


State 52

   19 function_def: named_type IDENTIFIER '(' ')' '{' $@1 optional_local_var_decl_stmt_list statement_list • '}'
   35 statement_list: statement_list • statement

    IDENTIFIER  shift, and go to state 55
    PRINT       shift, and go to state 56
    READ        shift, and go to state 57
    RETURN      shift, and go to state 58
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    DO          shift, and go to state 61
    '{'         shift, and go to state 62
    '}'         shift, and go to state 63

    statement             go to state 64
    block_statement       go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    assignment_statement  go to state 68
    variable_as_operand   go to state 69
    variable_name         go to state 70
    function_call         go to state 71
    print_statement       go to state 72
    read_statement        go to state 73
    return_statement      go to state 74
    call_statement        go to state 75


State 53

   33 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt •

    $default  reduce using rule 33 (var_decl_stmt_list)


State 54

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list • statement_list '}'

    $default  reduce using rule 36 (statement_list)

    statement_list  go to state 76


State 55

   52 variable_name: IDENTIFIER •
   53 function_call: IDENTIFIER • '(' ')'
   54              | IDENTIFIER • '(' argument_list ')'

    '('  shift, and go to state 77

    $default  reduce using rule 52 (variable_name)


State 56

   79 print_statement: PRINT • expression ';'

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 86
    constant_as_operand  go to state 87


State 57

   80 read_statement: READ • variable_name ';'

    IDENTIFIER  shift, and go to state 88

    variable_name  go to state 89


State 58

   81 return_statement: RETURN • ';'
   82                 | RETURN • expression ';'

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83
    ';'              shift, and go to state 90

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 91
    constant_as_operand  go to state 87


State 59

   46 if_statement: IF • '(' expression ')' statement
   47             | IF • '(' expression ')' statement ELSE statement

    '('  shift, and go to state 92


State 60

   48 while_statement: WHILE • '(' expression ')' statement

    '('  shift, and go to state 93


State 61

   49 while_statement: DO • statement WHILE '(' expression ')' ';'

    IDENTIFIER  shift, and go to state 55
    PRINT       shift, and go to state 56
    READ        shift, and go to state 57
    RETURN      shift, and go to state 58
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    DO          shift, and go to state 61
    '{'         shift, and go to state 62

    statement             go to state 94
    block_statement       go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    assignment_statement  go to state 68
    variable_as_operand   go to state 69
    variable_name         go to state 70
    function_call         go to state 71
    print_statement       go to state 72
    read_statement        go to state 73
    return_statement      go to state 74
    call_statement        go to state 75


State 62

   45 block_statement: '{' • statement_list '}'

    $default  reduce using rule 36 (statement_list)

    statement_list  go to state 95


State 63

   19 function_def: named_type IDENTIFIER '(' ')' '{' $@1 optional_local_var_decl_stmt_list statement_list '}' •

    $default  reduce using rule 19 (function_def)


State 64

   35 statement_list: statement_list statement •

    $default  reduce using rule 35 (statement_list)


State 65

   44 statement: block_statement •

    $default  reduce using rule 44 (statement)


State 66

   42 statement: if_statement •

    $default  reduce using rule 42 (statement)


State 67

   43 statement: while_statement •

    $default  reduce using rule 43 (statement)


State 68

   37 statement: assignment_statement •

    $default  reduce using rule 37 (statement)


State 69

   50 assignment_statement: variable_as_operand • ASSIGNMENT expression ';'

    ASSIGNMENT  shift, and go to state 96


State 70

   51 variable_as_operand: variable_name •

    $default  reduce using rule 51 (variable_as_operand)


State 71

   83 call_statement: function_call • ';'

    ';'  shift, and go to state 97


State 72

   38 statement: print_statement •

    $default  reduce using rule 38 (statement)


State 73

   39 statement: read_statement •

    $default  reduce using rule 39 (statement)


State 74

   40 statement: return_statement •

    $default  reduce using rule 40 (statement)


State 75

   41 statement: call_statement •

    $default  reduce using rule 41 (statement)


State 76

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list • '}'
   35 statement_list: statement_list • statement

    IDENTIFIER  shift, and go to state 55
    PRINT       shift, and go to state 56
    READ        shift, and go to state 57
    RETURN      shift, and go to state 58
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    DO          shift, and go to state 61
    '{'         shift, and go to state 62
    '}'         shift, and go to state 98

    statement             go to state 64
    block_statement       go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    assignment_statement  go to state 68
    variable_as_operand   go to state 69
    variable_name         go to state 70
    function_call         go to state 71
    print_statement       go to state 72
    read_statement        go to state 73
    return_statement      go to state 74
    call_statement        go to state 75


State 77

   53 function_call: IDENTIFIER '(' • ')'
   54              | IDENTIFIER '(' • argument_list ')'

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83
    ')'              shift, and go to state 99

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    argument_list        go to state 100
    expression           go to state 101
    constant_as_operand  go to state 87


State 78

   76 constant_as_operand: INTEGER_NUMBER •

    $default  reduce using rule 76 (constant_as_operand)


State 79

   77 constant_as_operand: FLOAT_NUMBER •

    $default  reduce using rule 77 (constant_as_operand)


State 80

   78 constant_as_operand: STRING_CONSTANT •

    $default  reduce using rule 78 (constant_as_operand)


State 81

   62 expression: NOT • expression

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 102
    constant_as_operand  go to state 87


State 82

   61 expression: '-' • expression

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 103
    constant_as_operand  go to state 87


State 83

   72 expression: '(' • expression ')'

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 104
    constant_as_operand  go to state 87


State 84

   74 expression: variable_as_operand •

    $default  reduce using rule 74 (expression)


State 85

   73 expression: function_call •

    $default  reduce using rule 73 (expression)


State 86

   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression
   79 print_statement: PRINT expression • ';'

    EQ   shift, and go to state 105
    NE   shift, and go to state 106
    LT   shift, and go to state 107
    LE   shift, and go to state 108
    GT   shift, and go to state 109
    GE   shift, and go to state 110
    AND  shift, and go to state 111
    OR   shift, and go to state 112
    '?'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '*'  shift, and go to state 116
    '/'  shift, and go to state 117
    ';'  shift, and go to state 118


State 87

   75 expression: constant_as_operand •

    $default  reduce using rule 75 (expression)


State 88

   52 variable_name: IDENTIFIER •

    $default  reduce using rule 52 (variable_name)


State 89

   80 read_statement: READ variable_name • ';'

    ';'  shift, and go to state 119


State 90

   81 return_statement: RETURN ';' •

    $default  reduce using rule 81 (return_statement)


State 91

   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression
   82 return_statement: RETURN expression • ';'

    EQ   shift, and go to state 105
    NE   shift, and go to state 106
    LT   shift, and go to state 107
    LE   shift, and go to state 108
    GT   shift, and go to state 109
    GE   shift, and go to state 110
    AND  shift, and go to state 111
    OR   shift, and go to state 112
    '?'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '*'  shift, and go to state 116
    '/'  shift, and go to state 117
    ';'  shift, and go to state 120


State 92

   46 if_statement: IF '(' • expression ')' statement
   47             | IF '(' • expression ')' statement ELSE statement

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 121
    constant_as_operand  go to state 87


State 93

   48 while_statement: WHILE '(' • expression ')' statement

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 122
    constant_as_operand  go to state 87


State 94

   49 while_statement: DO statement • WHILE '(' expression ')' ';'

    WHILE  shift, and go to state 123


State 95

   35 statement_list: statement_list • statement
   45 block_statement: '{' statement_list • '}'

    IDENTIFIER  shift, and go to state 55
    PRINT       shift, and go to state 56
    READ        shift, and go to state 57
    RETURN      shift, and go to state 58
    IF          shift, and go to state 59
    WHILE       shift, and go to state 60
    DO          shift, and go to state 61
    '{'         shift, and go to state 62
    '}'         shift, and go to state 124

    statement             go to state 64
    block_statement       go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    assignment_statement  go to state 68
    variable_as_operand   go to state 69
    variable_name         go to state 70
    function_call         go to state 71
    print_statement       go to state 72
    read_statement        go to state 73
    return_statement      go to state 74
    call_statement        go to state 75


State 96

   50 assignment_statement: variable_as_operand ASSIGNMENT • expression ';'

    IDENTIFIER       shift, and go to state 55
    INTEGER_NUMBER   shift, and go to state 78
    FLOAT_NUMBER     shift, and go to state 79
    STRING_CONSTANT  shift, and go to state 80
    NOT              shift, and go to state 81
    '-'              shift, and go to state 82
    '('              shift, and go to state 83

    variable_as_operand  go to state 84
    variable_name        go to state 70
    function_call        go to state 85
    expression           go to state 125
    constant_as_operand  go to state 87


State 97

   83 call_statement: function_call ';' •

    $default  reduce using rule 83 (call_statement)


State 98

   21 function_def: named_type IDENTIFIER '(' formal_param_list ')' '{' $@2 optional_local_var_decl_stmt_list statement_list '}' •

    $default  reduce using rule 21 (function_def)


State 99

   53 function_call: IDENTIFIER '(' ')' •

    $default  reduce using rule 53 (function_call)


State 100

   54 function_call: IDENTIFIER '(' argument_list • ')'
   55 argument_list: argument_list • ',' expression

    ','  shift, and go to state 126
    ')'  shift, and go to state 127


State 101

   56 argument_list: expression •
   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression

    EQ   shift, and go to state 105
    NE   shift, and go to state 106
    LT   shift, and go to state 107
    LE   shift, and go to state 108
    GT   shift, and go to state 109
    GE   shift, and go to state 110
    AND  shift, and go to state 111
    OR   shift, and go to state 112
    '?'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '*'  shift, and go to state 116
    '/'  shift, and go to state 117

    $default  reduce using rule 56 (argument_list)


State 102

   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   62           | NOT expression •
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression

    EQ   shift, and go to state 105
    NE   shift, and go to state 106
    LT   shift, and go to state 107
    LE   shift, and go to state 108
    GT   shift, and go to state 109
    GE   shift, and go to state 110
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '*'  shift, and go to state 116
    '/'  shift, and go to state 117

    $default  reduce using rule 62 (expression)


State 103

   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   61           | '-' expression •
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression

    $default  reduce using rule 61 (expression)


State 104

   57 expression: expression • '+' expression
   58           | expression • '-' expression
   59           | expression • '*' expression
   60           | expression • '/' expression
   63           | expression • EQ expression
   64           | expression • NE expression
   65           | expression • LT expression
   66           | expression • LE expression
   67           | expression • GT expression
   68           | expression • GE expression
   69           | expression • AND expression
   70           | expression • OR expression
   71           | expression • '?' expression ':' expression
   72           | '(' expression • ')'
